allow-k8s.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: test
  name: allow-k8s
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    ports:
      - port: 443
        protocol: TCP
