allow-ns.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: test
  name: allow-in-same-ns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: test
      podSelector: {}
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: linkerd
      podSelector: {}
    - ipBlock:
        cidr: 0.0.0.0/0
