deny.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: test
  name: default-deny-all-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress: []
